# CppLibraryTemplate

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  TODO.md  appveyor.yml  conanfile.py
cmake/: FindProgramRequired.cmake  InvokeFormat.cmake  InvokeTidy.cmake  MergeSingleHeader.cmake  PrefixedVariable.cmake  PrettyTidy.cmake
conan/: .gitignore  CMakeLists.txt  build.py  conanfile.in  conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
docs/: .gitignore  CMakeLists.txt  doxy.in
examples/: CMakeLists.txt  clisquare.cpp
format/: CMakeLists.txt
scripts/: clang-tidy-check.sh  common.py  formatter.py  hmerge.py  run-clang-format.py  tidyup.py
single_include/: prefix.in  prefix.pre
single_include/sample_library/: sample_lib.hpp
src/sample_library/: sample_library.hpp  square.hpp
src/sample_library/detail/: identity.hpp
tests/: CMakeLists.txt
tests/sample_library/: square.cpp
tidy/: .clang-tidy  CMakeLists.txt
